<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".LivePet">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:layout_marginStart="118dp"
        android:layout_marginBottom="66dp"
        android:text="Boredom:"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/boredStat"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="66dp"
        android:gravity="center_horizontal"
        android:outlineProvider="none"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="122dp"
        android:layout_height="62dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="8dp"
        android:text="PLAY"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startbtn"
        app:layout_constraintTop_toBottomOf="@+id/petImage" />

    <Button
        android:id="@+id/feedBtn"
        android:layout_width="124dp"
        android:layout_height="58dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="56dp"
        android:text="FEED"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/startbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petImage" />

    <Button
        android:id="@+id/cleanBtn"
        android:layout_width="127dp"
        android:layout_height="61dp"
        android:layout_marginTop="13dp"
        android:text="CLEAN"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petImage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="141dp"
        android:text="Your Pet"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/petImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/petImage"
        android:layout_width="394dp"
        android:layout_height="437dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="13dp"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toTopOf="@+id/startbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:srcCompat="@drawable/homescreen" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="20dp"
        android:text="Statistics of your pet"
        android:textColor="#020202"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playBtn" />

    <TextView
        android:layout_width="103dp"
        android:layout_height="37dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="3dp"
        android:text="Clean:"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/cleanStat"
        app:layout_constraintStart_toEndOf="@+id/fedStat"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/cleanStat"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="155dp"
        android:gravity="center_horizontal"
        android:outlineProvider="none"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fedStat"
        android:layout_width="56dp"
        android:layout_height="29dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="58dp"
        android:gravity="center_horizontal"
        android:outlineProvider="none"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="161dp"
        android:text="Fed:"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fedStat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</androidx.constraintlayout.widget.ConstraintLayout>